# worlde_rs

./: .gitignore
wordle_rs/: Cargo.toml  index.html
wordle_rs/src/: main.rs
worlde_rs_api/: DbModels.fs  Models.fs  Program.fs  WorldeDbContext.fs  worlde_rs_api.fsproj  worlde_rs_api.sln
worlde_rs_api/Controllers/: WordsController.fs
worlde_rs_api/Properties/: launchSettings.json
