[package]
name = "wordle_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.7.0"
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
gloo-console = "0.2.1"
yew-utils = "0.2.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.30"
yew-hooks = "0.1.56"
serde_json = "1.0.81"
serde = "1.0.137"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "js",
]